--- a/src/app/domains/materials/components/materials-management/materials-management.component.html
+++ b/src/app/domains/materials/components/materials-management/materials-management.component.html
@@ -113,7 +113,7 @@
                 </td>
               </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" class="mat-header-row tableHeader"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
 
