--- a/src/app/domains/work-order/components/work-order-list/work-order-list.component.scss
+++ b/src/app/domains/work-order/components/work-order-list/work-order-list.component.scss
@@ -41,7 +41,7 @@
         transition: background-color 0.2s;
 
         &:hover {
-          background-color: #f5f5f5;
+          background-color: #f5f5f57a;
         }
       }
 
