--- a/src/app/shared/components/ng-table/ng-table.component.html
+++ b/src/app/shared/components/ng-table/ng-table.component.html
@@ -1,29 +1,81 @@
-<mat-table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-  <!-- Id Column -->
-  <ng-container matColumnDef="wo-id">
-    <mat-header-cell mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
-    <mat-cell mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
-  </ng-container>
+<div class="ng-table-container">
+  <!-- Modular Table Header -->
+  <app-ng-table-header
+    *ngIf="showHeader"
+    [title]="title"
+    [showSearch]="showSearch"
+    [showAddButton]="showAddButton && hasAddAction()"
+    [addButtonText]="addButtonText"
+    (addClick)="onAddClick()"
+    (filterChange)="onFilterChange($event)">
+    <!-- Slot for custom header content -->
+    <ng-content select="[header]"></ng-content>
+  </app-ng-table-header>
 
-  <!-- Location Column -->
-  <ng-container matColumnDef="wo-location">
-    <mat-header-cell mat-header-cell *matHeaderCellDef> Location </mat-header-cell>
-    <mat-cell mat-cell *matCellDef="let element"> {{element.location}} </mat-cell>
-  </ng-container>
+  <!-- Main Table -->
+  <div class="mat-elevation-z1 ng-table-wrapper">
+    <table mat-table [dataSource]="dataSource" matSort class="ng-table">
 
-  <!-- Type Column -->
-  <ng-container matColumnDef="wo-type">
-    <mat-header-cell mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
-    <mat-cell mat-cell *matCellDef="let element"> {{element.type}} </mat-cell>
-  </ng-container>
+      <!-- Dynamic Columns -->
+      <ng-container *ngFor="let column of visibleColumns">
+        <ng-container [matColumnDef]="column.name">
+          <!-- Column Headers with Sorting -->
+          <th mat-header-cell *matHeaderCellDef
+              [style.width]="column.width"
+              [mat-sort-header]="getSortHeaderId(column)">
+            {{ column.label }}
+          </th>
 
-  <!-- Status Column -->
-  <ng-container matColumnDef="wo-status">
-    <mat-header-cell mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
-    <mat-cell mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
-  </ng-container>
+          <!-- Column Data Cells -->
+          <td mat-cell *matCellDef="let row" (click)="onRowClick(row)">
+            {{ getCellValue(row, column) }}
+          </td>
+        </ng-container>
+      </ng-container>
 
-  <mat-header-row class="fw-bold tableHeader" mat-header-row
-    *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-  <mat-row mat-row *matRowDef="let row; columns: displayedColumns;" routerLink="/portal/wo"></mat-row>
-</mat-table>
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions" *ngIf="showActionColumn">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row" class="actions-cell" (click)="$event.stopPropagation()">
+          <app-ng-table-actions
+            [actions]="actions"
+            [rowData]="row"
+            (actionClick)="onActionClick($event.action, $event.item)">
+          </app-ng-table-actions>
+        </td>
+      </ng-container>
+
+      <!-- Row definitions -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row"></tr>
+
+      <!-- No data row -->
+      <tr class="mat-row no-data-row" *matNoDataRow>
+        <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+          <div class="no-data-message">
+            <mat-icon>info</mat-icon>
+            <span>{{ filterValue ? 'No results matching "' + filterValue + '"' : emptyMessage }}</span>
+          </div>
+        </td>
+      </tr>
+    </table>
+
+    <!-- Paginator -->
+    <mat-paginator
+      *ngIf="showPaginator"
+      [pageSize]="pageSize"
+      [pageSizeOptions]="pageSizeOptions"
+      showFirstLastButtons
+      (page)="onPageChange($event)">
+    </mat-paginator>
+  </div>
+</div>
+
+<!-- Declare content projection templates for additional flexibility -->
+<ng-template #headerTemplate>
+  <ng-content select="[header]"></ng-content>
+</ng-template>
+
+<ng-template #footerTemplate>
+  <ng-content select="[footer]"></ng-content>
+</ng-template>
