Implement total estimated price calculation in work order overview tab. Updated template to use new method for displaying estimated price, enhancing accuracy in price representation based on work order items.

--- a/src/app/domains/work-order/components/work-order-details/components/wo-overview-tab/wo-overview-tab.component.html
+++ b/src/app/domains/work-order/components/work-order-details/components/wo-overview-tab/wo-overview-tab.component.html
@@ -25,7 +25,7 @@
           </div>
           <div class="info-item">
             <span class="info-label">Estimated Price</span>
-            <span class="info-value">{{ workOrder.details.estimatedPrice | currency }}</span>
+            <span class="info-value">{{ getTotalEstimatedPrice() | currency }}</span>
           </div>
         </div>
       </mat-card-content>
