Enhance resolve issue dialog styles by adding padding to the dialog content and full-width elements for improved layout and user experience.

--- a/src/app/domains/work-order/components/work-order-details/components/wo-issues-tab/resolve-issue-dialog/resolve-issue-dialog.component.scss
+++ b/src/app/domains/work-order/components/work-order-details/components/wo-issues-tab/resolve-issue-dialog/resolve-issue-dialog.component.scss
@@ -12,6 +12,7 @@ mat-dialog-title {
 mat-dialog-content {
   padding-top: 20px !important;
   min-width: 500px;
+  padding: 16px;
   
   @media (max-width: 600px) {
     min-width: unset;
@@ -60,6 +61,7 @@ mat-dialog-content {
 .resolve-form {
   .full-width {
     width: 100%;
+    padding: 16px;
   }
 }
 
